Misc configuration changes.

--- a/config/default.config
+++ b/config/default.config
@@ -1,5 +1,12 @@
 {
   "Image": "",
+  "Env": [
+    "AWS_REGION=us-east-1",
+    "AWS_ACCESS_KEY_ID=",
+    "AWS_SECRET_ACCESS_KEY=",
+    "CLUSTER_TAG_NAME=",
+    "CLUSTER_TAG_VALUE="
+  ],
   "HostConfig": {
     "PortBindings": {
       "8080/tcp": [
