--- a/config/default.env
+++ b/config/default.env
@@ -6,4 +6,4 @@ REGISTRY_IMAGE=
 REGISTRY_AUTH=
 
 CONTAINER_NAME=docker-cluster
-CONTAINER_CONFIG=./config/cluster.json
+CONTAINER_CONFIG=./config/.config
